complete readme & added styling

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   <body>
     <div class="homepage">
       <h1>Shinobi's Road to Fullstack !</h1>
+      <!-- <p>To play use the spacebar, up arrow key or left click</p> -->
       <button class="start-btn">Start Game</button>
       <audio id="background-music">
-        <source src="./assets/naruto_backgroundmusic.mp3" type="audio/mpeg">
+        <source src="./assets/naruto_backgroundmusic.mp3" type="audio/mpeg" />
         Your browser does not support the audio element.
       </audio>
       <button class="homepage-mute-btn">Play/Pause Music</button>
