--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shinobi Dev's Adventures</title>
     <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     <div class="homepage">
       <h1>Shinobi's Road to Fullstack !</h1>
-      <!-- <p>To play use the spacebar, up arrow key or left click</p> -->
+      <p>To play use the spacebar, up arrow key or left click</p> 
       <button class="start-btn">Start Game</button>
       <audio id="background-music">
         <source src="./assets/naruto_backgroundmusic.mp3" type="audio/mpeg" />
